projects/kit/components/carousel/carousel.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

:host {
    position: relative;
    display: block;
    overflow: hidden;

    &._draggable {
        user-select: none;

        &:hover {
            cursor: grab;
        }

        &:active {
            cursor: grabbing;
        }
    }
}

.t-items {
    display: flex;

    :host._transitioned & {
        .transition(transform);
    }
}

::ng-deep [tuiCarouselButtons] [tuiIconButton] {
    border-radius: 100%;
}

.t-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: var(--tui-carousel-padding, 0 1.25rem);
    flex: 1;
    min-inline-size: 100%;
    max-inline-size: 100%;
    box-sizing: border-box;
    border: none;
    margin: 0;
}

.t-wrapper {
    position: sticky;
    left: 0;
    right: 0;
    min-inline-size: 100%;
    overflow: hidden;
}

.t-scroller {
    .scrollbar-hidden();

    display: flex;
    overflow: auto;
    overscroll-behavior-x: none;
    touch-action: none;

    &::before,
    &::after {
        content: '';
        display: block;
        min-inline-size: 1rem;
    }
}

